# mpg123

./: CMakeLists.txt  Makefile.am  Makefile.in  clang_libmpg123.cbp  config.h  config1.h  deployment.rc  libmpg123.cbp  libmpg123.sln  libmpg123.vcxproj  libmpg123.vcxproj.filters  m_libmpg123.vcxproj  m_mpg123.vcxproj  mpg123.cbp  mpg123.h  mpg123.vcxproj  mpg123.vcxproj.filters  nord_mpg123.vcxproj  nord_veriwell_libmpg123.vcxproj  nord_veriwell_libmpg123.vcxproj.filters  u_libmpg123.vcxproj  u_libmpg123.vcxproj.filters  u_mpg123.vcxproj
include/: mpg123.h
include/mpg123/: debug.h  mpg123.h.in
libmpg123.xcodeproj/: project.pbxproj
mpg123.xcodeproj/: project.pbxproj
mpg123.xcodeproj/xcuserdata/camilo.xcuserdatad/xcschemes/: xcschememanagement.plist
mpg123_2.xcodeproj/: project.pbxproj
mpg123_2.xcodeproj/xcuserdata/production.xcuserdatad/xcschemes/: xcschememanagement.plist
ports/MSVC++/: mpg123.h
ports/MSVC++/2010/libmpg123/: libmpg123.vcxproj
ports/MSVC++/2015/uwp/libmpg123/: libmpg123.vcxproj
ports/MSVC++/2015/win32/libmpg123/: libmpg123.vcxproj
ports/MSVC++/2015/win32/libmpg123/Win32/Release_x86_Dll/libmpg123.tlog/: libmpg123.lastbuildstate
ports/MSVC++/CMP3Stream/INCLUDE/CORE/: SourceFilter_MP3.H
ports/MSVC++/CMP3Stream/SOURCE/: SourceFilter_MP3Stream.CPP
ports/Xcode/: mpg123.h
ports/Xcode/mpg123.xcodeproj/: project.pbxproj
src/: config.h.templ  sysutil.h  waves.h
src/compat/: compat.c  compat.h  compat_impl.h
src/libmpg123/: dct64.c  dct64_altivec.c  dct64_i386.c  dct64_i486.c  debug.h  decode.h  frame.h  getcpuflags.h  layer1.c  layer3.c  lfs_alias.c  lfs_wrap.c  mpeghead.h  optimize.c  optimize.h  synth.h  synth_altivec.c  synth_mono.h  synth_ntom.h  tabinit.c
src/libout123/: buffer.h  out123.h.in
